--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -596,7 +596,7 @@ The correlation between the adsorption free energy of xenon and the Xe/Kr exchan
     \caption{Comparison of the ambient-pressure Xe/Kr exchange Gibbs free energy calculated by GCMC simulations of RASPA2 with 100,000 cycles and the low-pressure exchange enthalpy (left, in \si{\kilo\joule\per\mole}) and entropy (right, in \si{\kilo\joule\per\mole\per\kelvin}) calculated by the GrAED algorithm (same parameters).}\label{fgr:grid_comp_exc}
 \end{figure}
 
-Upon revisiting the exchange thermodynamic quantities that hold greater relevance to the specific context of this thesis, a notable correlation is observed between the exchange enthalpy at low pressure, calculated using GrAED, and the exchange Gibbs free energy at ambient pressure, calculated by GCMC, as illustrated in Figure~\ref{fgr:grid_comp_exc}. However, some discrepancies can be detected around the range of $-10$ and $0$~\si{\kilo\joule\per\mole} for the ambient-pressure exchange free energy. These discrepancies can be attributed to the exchange entropy, which remains relatively stable at around $-0.01$~\si{\kilo\joule\per\mole\per\kelvin}, but exhibits a peak for structures within the aforementioned range of ambient-pressure exchange Gibbs free energy. The strong overall correlation can be explained by the enthalpic nature of the separation process of xenon from krypton (see chapter 2). Furthermore, the problematic range, where the correlation weakens, corresponds to the range associated with a drop in selectivity, as illustrated in Figure~\ref{fgr:G_900K}. These exchange thermodynamic quantities provide valuable insights for distinguishing materials and improving the modeling of the selectivity drop phenomenon. A more quantitative approach will be developed in the subsequent chapter.
+Upon revisiting the exchange thermodynamic quantities that hold greater relevance to the specific context of this thesis, a notable correlation is observed between the exchange enthalpy at low pressure, calculated using GrAED, and the exchange Gibbs free energy at ambient pressure, calculated by GCMC, as illustrated in Figure~\ref{fgr:grid_comp_exc}. However, some discrepancies can be detected around the range of $-10$ and $0$~\si{\kilo\joule\per\mole} for the ambient-pressure exchange free energy. These discrepancies can be attributed to the exchange entropy, which remains relatively stable at around $-0.01$~\si{\kilo\joule\per\mole\per\kelvin}, but exhibits a peak for structures within the aforementioned range of ambient-pressure exchange Gibbs free energy. The strong overall correlation can be explained by the enthalpic nature of the separation process of xenon from krypton (Chapter 2). Furthermore, the problematic range, where the correlation weakens, corresponds to the range associated with a drop in selectivity, as illustrated in Figure~\ref{fgr:G_900K}. These exchange thermodynamic quantities provide valuable insights for distinguishing materials and improving the modeling of the selectivity drop phenomenon. A more quantitative approach will be developed in the subsequent chapter.
 
 
 \subsubsection{High-temperature quantities}
@@ -669,7 +669,7 @@ These statistical quantities provide additional insights on the distribution. Fo
 
 Figure~\ref{fgr:enthalpy_skew_kurt} further illustrate the range of selectivity values discussed throughout this section. The different statistical quantities introduced in this discussion can be used to sort materials within this range. The skewness and kurtosis values can potentially establish a theoretical link with the previously identified selectivity drop. However, without a model or framework, it is impossible to find the accurate relationship solely by visual observation.
 
-\textbf{Uniformely weighted distribution}
+\textbf{Uniformly weighted distribution}
 
 To conclude this overview of the thermodynamic/energetic descriptors derived from the newly developed grid sampling, a more uniformly weighted energy distribution will be examined. The significantly higher energy values corresponding to the overlap with a framework atom are naturally excluded by the sampling process. In this case, a threshold value of $100$~\si{\kilo\joule\per\mole} has been used for the grid sampling, defining a very large overlap range. Energy points below this threshold are considered in the distribution, representing the adsorbable sites (no overlap) that are weighted based on their occupancy of the void volume.
 
