--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -8,7 +8,7 @@
 
 \section{Limits of the current screening methodologies}
 
-As presented in my review of the different materials screening methodologies in chapter 1, it is very common to screen for one particular metric, whether it is the selectivity or the permselectivity or the capacity depending on the targeted application. Attempts at screening that search for the most selective materials but combine this metric with a good capacity are becoming more and more common.\autocite{Chung_2019,Zhang_2022,Solanki_2020} For instance, many improvements can be made on selectivity screening, in terms of calculation efficiency, or in terms of correctness of the molecular description. The previous chapters mainly focused on the gain in efficiency by exploring many adsorption energy sampling techniques and by comparing their computational time and their accuracy. Moreover, the screening procedure was also improved by incorporating transport properties. And, even for diffusion coefficient calculations, alternative calculation strategies were explored and developed to increase the efficiency of screening (transition state detection, machine learning models) compared to standard computationally expensive ones (MD simulations).
+As presented in my review of the different materials screening methodologies in Chapter 1, it is very common to screen for one particular metric, whether it is the selectivity or the permselectivity or the capacity depending on the targeted application. Attempts at screening that search for the most selective materials but combine this metric with a good capacity are becoming more and more common.\autocite{Chung_2019,Zhang_2022,Solanki_2020} For instance, many improvements can be made on selectivity screening, in terms of calculation efficiency, or in terms of correctness of the molecular description. The previous chapters mainly focused on the gain in efficiency by exploring many adsorption energy sampling techniques and by comparing their computational time and their accuracy. Moreover, the screening procedure was also improved by incorporating transport properties. And, even for diffusion coefficient calculations, alternative calculation strategies were explored and developed to increase the efficiency of screening (transition state detection, machine learning models) compared to standard computationally expensive ones (MD simulations).
 
 To overcome the shortcomings of the current adsorption screening methodologies, a more accurate physical description of the nanoporous system is required. For example, the rigidity of the structures in most of the screening procedures could sometimes mislead towards materials that appear to have a very high selectivity, whereas the flexible nature of the material tends to decrease the computed selectivity value. By taking into account flexibility, the rankings found by previous screenings can be modified, hence opening the possibility to find other top materials. The other physical property that could completely change the results obtained by current methodologies is the polarization. For adsorbates like xenon and krypton, the difference in polarizability is in fact at the origin of the separability of these gas using an adsorbent material. A better description of this particular property could completely change the results of the screening. Looking at the best experimental materials, they are either decorated with polar groups like in Ref.~\cite{Li_2019} or they present open metal sites like in Ref.~\cite{Pei_2022}. However, these criteria were not found essential when looking at the results of the current screenings. 
 
@@ -16,7 +16,7 @@ This final chapter will explore perspective studies in three main research focus
 
 \section{Future developments on transport properties}
 
-During my Ph.D. project, transport properties were thoroughly studied using MD simulations and an ML model mainly based on the PLD and a proxy of the diffusion activation energy. This approach gives very promising results since it speeds up considerably the evaluation of diffusion coefficient values. However, the generalizability to other types of systems is not guaranteed when using an ML-based approach. To create a simulation that would be faster than MD simulations and more accurate and reliable than the ML-based approach, the next steps would be to finish the development of the diffusion coefficient calculation code based on the transition state theory (TST) and on kinetic Monte Carlo (kMC) simulations, which is at the last step of the development as explained in the previous chapter. When developed, this new approach can provide diffusion coefficient that could be fed into a breakthrough modeling software in order to compare to experimental data. This section describes such a software by discussing the perspectives opened up by RUPTURA\autocite{Sharma_2023}.
+During my Ph.D. project, transport properties were thoroughly studied using MD simulations and an ML model mainly based on the PLD and a proxy of the diffusion activation energy. This approach gives very promising results since it speeds up considerably the evaluation of diffusion coefficient values. However, the generalizability to other types of systems is not guaranteed when using an ML-based approach. To create a simulation that would be faster than MD simulations and more accurate and reliable than the ML-based approach, the next steps would be to finish the development of the diffusion coefficient calculation code based on the transition state theory (TST) and on kinetic Monte Carlo (kMC) simulations, which is at the last step of the development as explained in Chapter 5. When developed, this new approach can provide diffusion coefficient that could be fed into a breakthrough modeling software in order to compare to experimental data. This section describes such a software by discussing the perspectives opened up by RUPTURA\autocite{Sharma_2023}.
 
 \subsection{Final development of the optimized version of TuTraST}
 
@@ -116,7 +116,7 @@ This approach does not completely describe the flexibility effect on the selecti
 
 According to original paper on SBMOF-1,\autocite{Banerjee_2016} the theoretical selectivity calculated by UFF is around $70.6$. However, the experimental selectivity is much lower, around $16$. To solve this difference, Witman et al.\ used a snapshot-based method to evaluate the effect of selectivity. The intrinsic flexibility lowers the selectivity, which goes in the right direction to explain the difference of selectivity, but it does not seem to capture the whole picture. 
 
-For isntance, the discrepancies observed could also be explained by the deformation induced by the loading of adsorbate inside the material. For instance, experimentally, a structure is often not empty when we resolve it by X-ray, and molecules are actually loaded inside. As shown in Table~\ref{table:sbmof}, the structure that was originally published for its good \ce{CO2}/\ce{N2} selectivity\autocite{Yeh2012,Banerjee2012} was also tested for water adsorption, and two different structures emerged from this study: \texttt{KAXQOR} and \texttt{KAXQIL}. The first one is loaded with either air or \ce{CO2}, and the structure does not seem to be stretched as much (low LCD values around \SI{4.5}{\angstrom}). The second one, on the other hand, is filled with water that forms big clusters inside the pores and therefore stretches the pore size towards higher values (high LCD values around \SI{5.0}{\angstrom}). Looking at the structures resolved in the \emph{Nature Communications} study\autocite{Banerjee_2016}, depending on the adsorbate (UQEFAZ for krypton or UQEFED for xenon), the LCD and PLD values change in the first order according to the size of the adsorbate as illustrated in Figure~\ref{fgr:stretch}. There are, of course, other effects, like the clustering we mentioned for water, but also less expected effects such as the orientation of the adsorbate inside the structure. 
+For instance, the discrepancies observed could also be explained by the deformation induced by the loading of adsorbate inside the material. For instance, experimentally, a structure is often not empty when we resolve it by X-ray, and molecules are actually loaded inside. As shown in Table~\ref{table:sbmof}, the structure that was originally published for its good \ce{CO2}/\ce{N2} selectivity\autocite{Yeh2012,Banerjee2012} was also tested for water adsorption, and two different structures emerged from this study: \texttt{KAXQOR} and \texttt{KAXQIL}. The first one is loaded with either air or \ce{CO2}, and the structure does not seem to be stretched as much (low LCD values around \SI{4.5}{\angstrom}). The second one, on the other hand, is filled with water that forms big clusters inside the pores and therefore stretches the pore size towards higher values (high LCD values around \SI{5.0}{\angstrom}). Looking at the structures resolved in the \emph{Nature Communications} study\autocite{Banerjee_2016}, depending on the adsorbate (UQEFAZ for krypton or UQEFED for xenon), the LCD and PLD values change in the first order according to the size of the adsorbate as illustrated in Figure~\ref{fgr:stretch}. There are, of course, other effects, like the clustering we mentioned for water, but also less expected effects such as the orientation of the adsorbate inside the structure. 
 
 \begin{table}[t]
 \centering
@@ -180,7 +180,7 @@ This method could be generalized to other systems by screening for materials wit
 
 Guest transport can also be modulated by the adsorbate-induced flexibility of SBMOF-1. Depending on the structural configuration of the material, the diffusion coefficient is limiting only for some configurations of the material: it is equal to $3\times10^{-8}$~\si{\square\cm\per\s} for \texttt{KAXQIL} and $1\times10^{-11}$~\si{\square\cm\per\s} for \texttt{UQEFED} (Table~\ref{table:sbmof}). This lower diffusion coefficient can be simply explained by the change in PLD value, the channel bottleneck diameter, induced by the stretching illustrated in Figure~\ref{fgr:stretch}. For a material mostly loaded by krypton molecules, the diffusion channel is much broader, which explains the much higher diffusion coefficient of xenon ($5\times10^{-6}$~\si{\square\cm\per\s}). Although the xenon adsorbate does not diffuse freely in the structure, the diffusion is much less obstructed than in the previous material configuration of SBMOF-1 (\texttt{UQEFED}). The Figure~\ref{fgr:stretch} suggests that the SBMOF-1 material changes its pore configuration according to the shape and size of the atoms loaded inside, and these induced deformations lead to very different separation performances.
 
-Now that we identified two completely different diffusion behaviors, these results can be extrapolated to hypothetical conditions. For instance, if there is a relation between the quantity of xenon inside the pores and the structural similarity towards \texttt{UQEFED}, then the material could kinetically limit the adsorption of xenon at a high loading of xenon. In other words, it could be kinetically harder to adsorb xenon at higher xenon loadings. But at lower xenon loading, it also means that there is no diffusion limitations as is suggested by the very steep mass transfer zone on the breakthrough curve of xenon in Figure~\ref{fgr:sbmof_breakthrough}. If we connect this result on the influence of flexibility on the transport properties to the one obtained on the adsorption process itself, the adsorption of xenon is also much more thermodynamically favorable at higher values of xenon loading. There is a thermodynamics/kinetics trade-off as articulated in the previous chapter on \texttt{KAXQIL}. Since \texttt{KAXQIL} and \texttt{UQEFED} are structurally very similar, the diffusional limitation combined with a very high selectivity can be transposed to the xenon-loaded structure (\texttt{UQEFED}), which is confirmed by the values of diffusion coefficients and selectivity reported in Table~\ref{table:sbmof}. At an industrial point of view, the inclusion of transport effects in the analysis highlights additional costs in adsorbing xenon at high loading values if this theoretical study is confirmed by experiments.
+Now that we identified two completely different diffusion behaviors, these results can be extrapolated to hypothetical conditions. For instance, if there is a relation between the quantity of xenon inside the pores and the structural similarity towards \texttt{UQEFED}, then the material could kinetically limit the adsorption of xenon at a high loading of xenon. In other words, it could be kinetically harder to adsorb xenon at higher xenon loadings. But at lower xenon loading, it also means that there is no diffusion limitations as is suggested by the very steep mass transfer zone on the breakthrough curve of xenon in Figure~\ref{fgr:sbmof_breakthrough}. If we connect this result on the influence of flexibility on the transport properties to the one obtained on the adsorption process itself, the adsorption of xenon is also much more thermodynamically favorable at higher values of xenon loading. There is a thermodynamics/kinetics trade-off as articulated in Chapter 5 on \texttt{KAXQIL}. Since \texttt{KAXQIL} and \texttt{UQEFED} are structurally very similar, the diffusional limitation combined with a very high selectivity can be transposed to the xenon-loaded structure (\texttt{UQEFED}), which is confirmed by the values of diffusion coefficients and selectivity reported in Table~\ref{table:sbmof}. At an industrial point of view, the inclusion of transport effects in the analysis highlights additional costs in adsorbing xenon at high loading values if this theoretical study is confirmed by experiments.
 
 By using simple simulation methods (Widom insertion and MD) on rigid structures, the effects of flexibility on both the adsorption and transport properties were probed using experimentally resolved structures in different adsorption conditions. This sheds some light on the experiment-theory discrepancies and opens up opportunities to understand similar problematic systems. Here, this study relied on the experimental data that was published on the SBMOF-1 structure, but the same resources are not always available for other systems and maybe an effort of data generation using either experiments or simulations should be performed in these cases. If generalized, this approach can even be automatically applied on a series of structures, opening up the possibility of ``flexibility-aware'' screenings in the future. Aware of the importance of both flexibility and transport effects, other studies have tried to incorporate both in a small-scale screening process.\autocite{Stanton_2022} These authors used a flexible forcefield and MD simulations to determine the diffusion coefficient and DFT calculations at the adsorption site to assess the adsorption performance. The main issue of this method is its computational cost, but it can be an alternative solution to the one introduced here, when no prior knowledge is available on the structure’s flexibility. 
 
