--- a/main.tex
+++ b/main.tex
@@ -366,7 +366,8 @@
       \mathop{}\mathopen{}\mathrm{d}
    }
    
-\newcommand{\todo}[1]{\textcolor{blue}{[#1]}}
+% \newcommand{\todo}[1]{\textcolor{blue}{[#1]}}
+\newcommand{\todo}[1]{{}}
 \newcommand{\final}[1]{\textcolor{green}{[#1]}} % final edit
 \newcommand{\bonus}[1]{\textcolor{violet}{[#1]}} % final edit
 
