--- a/1-screening.tex
+++ b/1-screening.tex
@@ -19,7 +19,7 @@ Nanoporous materials are characterized by their nanoscale structure constituted 
 \subsubsection{Adsorption isotherms and geometrical descriptors}
 
 %adsorption
-The process of particles or molecules adhering on a surface is called adsorption. Adsorption occurs due to attractive forces between adsorbates and the adsorbent surface, such as van der Waals forces, hydrogen bonding, and electrostatic interactions. The adsorption performance depends on the chemical nature of the interface, its exposed surface area and the shape of the pores. The characterization of adsorption properties of an adsorbate compound typically involves measuring the quantity of adsorbed molecules as a function of its pressure at a given temperature, which is referred to as adsorption isotherm. Figure~\ref{isotherm} illustrates exampls of adsorption isotherms that can be used, along other techniques, to determine the distribution of pore sizes, the accessible surface area and the pore volume.\autocite{Rouquerol_1994} These isotherms can also be utilized, through fitting models, to characterize the maximum adsorption uptake, among other adsorption descriptors.\autocite{Wang_2020} By using a set of experimental isotherms at similar but distinct temperatures, we can also retrieve information on the isosteric heat of adsorption $q_{st}$ (the negative differential of the excess enthalpy of adsorption with respect to the excess adsorption).\autocite{Nicholson2000} This heat of adsorption (related to the enthalpy of adsorption) can also be directly determined using calorimetry.\autocite{Dunne_1996} Additionally, measurements at infinite dilution enable the establishment of a relationship between the adsorbed quantity and the pressure, as defined by the Henry's law. The Henry adsorption constant, representing the slope of this linear regime,\autocite{Finsy2007} serves as another key adsorption descriptor. Although these thermodynamic quantities alone do not provide a complete picture of the adsorption process as an adsorption isotherm would, they are most valuable for comparing experimental data with computational models to rapidly characterize the materials suitable for a target gas adsorption process.
+The process of particles or molecules adhering on a surface is called adsorption. Adsorption occurs due to attractive forces between adsorbates and the adsorbent surface, such as van der Waals forces, hydrogen bonding, and electrostatic interactions. The adsorption performance depends on the chemical nature of the interface, its exposed surface area and the shape of the pores. The characterization of adsorption properties of an adsorbate compound typically involves measuring the quantity of adsorbed molecules as a function of its pressure at a given temperature, which is referred to as adsorption isotherm. Figure~\ref{isotherm} illustrates examples of adsorption isotherms that can be used, along other techniques, to determine the distribution of pore sizes, the accessible surface area and the pore volume.\autocite{Rouquerol_1994} These isotherms can also be utilized, through fitting models, to characterize the maximum adsorption uptake, among other adsorption descriptors.\autocite{Wang_2020} By using a set of experimental isotherms at similar but distinct temperatures, we can also retrieve information on the isosteric heat of adsorption $q_{st}$ (the negative differential of the excess enthalpy of adsorption with respect to the excess adsorption).\autocite{Nicholson2000} This heat of adsorption (related to the enthalpy of adsorption) can also be directly determined using calorimetry.\autocite{Dunne_1996} Additionally, measurements at infinite dilution enable the establishment of a relationship between the adsorbed quantity and the pressure, as defined by the Henry's law. The Henry adsorption constant, representing the slope of this linear regime,\autocite{Finsy2007} serves as another key adsorption descriptor. Although these thermodynamic quantities alone do not provide a complete picture of the adsorption process as an adsorption isotherm would, they are most valuable for comparing experimental data with computational models to rapidly characterize the materials suitable for a target gas adsorption process.
 
 \begin{figure}[ht]
   \centering
@@ -54,7 +54,7 @@ porosity, porosity open or closed to a given probe or adsorbate.
 %Definitions of surface area, porosity etc. Values depend on the method to extract them. A word on computational characterization (will be developed later)
 The cavities within nanoporous materials provide an exceptionally large adsorbable surface area, which is extremely useful for increasing the number of molecules within a given volume or mass of material, several thousands of square meters can be found in a gram of some nanoporous materials.\autocite{Farha_2012} A higher surface area of nanoporous materials allows for a greater number of molecules to be adsorbed for applications such as storage, separation or reactions. Therefore, accurate measurement of surface area using both experimental and computational methods is of utmost importance. The Brunauer–Emmett–Teller (BET) theory is the most widely used method for experimental determination of surface areas based on adsorption isotherms.\autocite{Detsi_2011} Most BET areas are calculated using the \ce{N2} isotherm at its boiling temperature (\SI{77}{\kelvin}). While alternative probe adsorbates can be considered, they are not standardized.\autocite{Tian_2017} However, it is important to note that the definition of surface area is highly dependent on the measurement conditions and the fitting methodology employed. In a statistical experiment involving 61 laboratories, a set of twelve isotherms was provided for BET area calculation, revealing significant disparities in calculation results.\autocite{Osterrieth_2022} 
 
-Beyond the experimental techniques, there are softwares such as Zeo++ or PoreBlazer that specialize in computing pore size distributions, surface areas and void fractions based on well-defined structure files.\autocite{Zeo++,PoreBlazer} The definition of these values also depends on the probe size chosen to model a given adsorbate, the size of the framework atoms and the quality of the input structure. The computational values utilize more comprehensive structural data rather than relying on adsorption models or isotherm data like the BET area calculation. However, the determination of these values heavily relies on a well-designed definition of the volume, the surface and the pore size we aim to evaluate. Moreover, these values also highly depend on the radii of the framework atoms and the adsorbate we consider.\autocite{Hung_2021}. In this thesis, we will rely on these computational methods to define geometrical descriptors of nanoporous materials.
+Beyond the experimental techniques, Zeo++ and PoreBlazer softwares specialize in computing pore size distributions, surface areas and void fractions based on well-defined structure files.\autocite{Zeo++,PoreBlazer} The definition of these values also depends on the probe size chosen to model a given adsorbate, the size of the framework atoms and the quality of the input structure. The computational values utilize more comprehensive structural data rather than relying on adsorption models or isotherm data like the BET area calculation. However, the determination of these values heavily relies on a well-designed definition of the volume, the surface and the pore size we aim to evaluate. Moreover, these values also highly depend on the radii of the framework atoms and the adsorbate we consider.\autocite{Hung_2021}. In this thesis, we will rely on these computational methods to define geometrical descriptors of nanoporous materials.
 
 \subsubsection{Classes of nanoporous materials}
 
@@ -122,7 +122,7 @@ To overcome these new challenges, researchers are increasingly turning to transf
 
 \section{Review of screening methodologies}
 
-Now that the main concepts around nanoporous materials and their computational representations have been covered, we can introduce the methods used to extract meaningful information from this data. These methods enable us to screen, i.e. evaluate systematically all the structures from a database. Given the scaling issue of such an enterprise, it is essential to employ speed-up strategies in these screenings. 
+Now that the main concepts around nanoporous materials and their computational representations have been covered, we can introduce the methods used to extract meaningful information from this data. These methods enable us to screen, i.e., evaluate systematically all the structures from a database. Given the scaling issue of such an enterprise, it is essential to employ speedup strategies in these screenings. 
 
 The following review aims to provide an exhaustive overview of different screening methodologies used for evaluating nanoporous materials across very different applications. This state-of-the-art review, originally published in Digital Discoveries Ref.~\cite{Ren_2022}, has been adapted for the purpose of this manuscript.
 
@@ -312,7 +312,7 @@ The industrial interest for noble gases lies first in the many applications atta
   Molten salt reactor\autocite{engel1971xenon,Riley_2019} &  unknown \\[0.5mm]
   \hline
 \end{tabular}
-\caption{Composition of the Xe/Kr mixture coming from different industrial sources of production. The Xe/Kr composition can change over time depending on the radioactive decay of Xe and Kr isotopes. The composition out of a molten salt reactor is unknow (no industrial installation exists) and depend on the fissile element, if it is a majority of \ex{235}U, then the composition would be very close to the one indicated by the Ref.~\cite{Blades_1956}. }\label{tab:indus_app}
+\caption{Composition of the Xe/Kr mixture coming from different industrial sources of production. The Xe/Kr composition can change over time depending on the radioactive decay of Xe and Kr isotopes. The composition out of a molten salt reactor is unknown (no industrial installation exists) and depend on the fissile element, if it is a majority of \ex{235}U, then the composition would be very close to the one indicated by the Ref.~\cite{Blades_1956}. }\label{tab:indus_app}
 \end{table}
 
 The role of a dispatchable source of low-carbon energy can only be fulfilled by batteries charged by renewable energies (wind or solar) or by nuclear plants. However, one of the major criticisms of this source of energy concerns the management of the radioactive waste. As promising technologies in gas separation emerge, there is an increasing need for a solution for the release of very small amount of radioactive off-gases like Kr\e{85} from nuclear spent fuels.\autocite{Blomeke_1969} Furthermore, stable xenon isotopes are also produced in these spent nuclear fuels, which can be used in all the above-mentioned applications. In the context of a regained interest in nuclear energy, the fourth generation nuclear plants are projected to be built on other technologies such as the light water or the molten salt technologies.\autocite{LeBlanc_2010} Molten salt reactors would continuously produce xenon and radioactive krypton in the electricity generation process.\autocite{Riley_2019} The development of gas separation units in these facilities would represent a promising source for xenon production. Yet, we can laboriously imagine deploying standard cryogenic distillation units in a nuclear facility for obvious security reasons. Consequently, nanoporous materials are considered as the alternative technology for xenon/krypton separation. Zeolites are already used as a pre-purification system,\autocite{kerry2007industrial} and they are now projected to be used as a standalone separation system. 
