--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -92,7 +92,7 @@ The lattice kinetic Monte Carlo method relies on a predefined lattice of stable 
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.9\textwidth]{figures/5-diffusion/kinetic_MC.pdf}
+    \includegraphics[width=0.8\textwidth,trim={0.2cm 0.2cm 0cm 0.7cm},clip]{figures/5-diffusion/kinetic_MC.pdf}
     \caption{Illustration of the core principle of lattice kinetic Monte Carlo in a periodic system. Within the periodic system, the movement of particles is governed by transition probabilities from one site to another. The transition rates are determined using the activation energy needed to move to the transition state between the two stable adsorption sites, as shown in equations~\ref{eq:trans_rate_path} and~\ref{eq:trans_rate}. }\label{fgr:kMC_principle}
 \end{figure}
 
