--- a/remerciements.tex
+++ b/remerciements.tex
@@ -29,9 +29,9 @@ Nicolas \textsc{Castel}, qui a embarqué sur son aventure doctorale en même tem
 Wenke \textsc{Li}, qui terminait sa dernière année de thèse et que je connaissais déjà depuis mon stage, je te remercie pour ta bonne humeur, ta générosité et ton altruisme.
 Maxime \textsc{Ducamp}, qui entamait ses deux dernières années de thèse avec nous et dont l'habitude de se lever tôt m'a toujours impressionné (8h, c'est vraiment tôt). Merci pour ton aide pour les différentes démarches administratives pour la thèse (ton planning avant la soutenance nous a été bien utile avec Nicolas).
 Lionel \textsc{Zoubritzky}, qui a rejoint notre grande famille des doctorants au début de ma deuxième année et dont les travaux sur la topologie des matériaux nanoporous m'ont toujours intrigué. Merci pour nos nombreuses discussions sur mes problèmes algorithmiques, tu es peut-être la seule personne avec qui je peux en discuter sans t'ennuyer !
-Dune \textsc{André}, qui nous a rejoints pour ma dernière année et avec qui j'aurais aimé passer plus de temps. Merci pour ta bonne humeur et de m'avoir fait découvrir le septième art français, moi qui suis plutôt inculte dans ce domain.
+Dune \textsc{André}, qui nous a rejoints pour ma dernière année et avec qui j'aurais aimé passer plus de temps. Merci pour ta bonne humeur et de m'avoir fait découvrir le septième art français, moi qui suis plutôt inculte dans ce domaine.
 
-J'aimerais également remercier les post-doctorants avec qui qui j'ai pu échanger lors des pauses déjeuner et café :
+J'aimerais également remercier les postdoctorants avec qui j'ai pu échanger lors des pauses déjeuner et café :
 Clément \textsc{Wespiser}, pour le verre que nous a payé à ton pot de départ avant que tu ne rejoignes le CEA.
 Ambroise \textsc{De Izarra}, pour nos discussions sur RASPA2. Bravo pour tes articles, ce n'était pas évident de coder dans RASPA2 !
 Luca \textsc{Brugnoli}, pour partager ta passion pour les livres et les films de science-fiction. 
