--- a/9-conclusion.tex
+++ b/9-conclusion.tex
@@ -3,7 +3,7 @@
 
 \chapter*{General conclusions}
 
-This thesis explored various approaches to find the best nanoporous materials for adsorption-based industrial xenon/krypton separation (e.g., pressure-swing adsorption). As highlighted in the literature review,\autocite{Ren_2022} high-throughput screening methods focus on a specific property of nanoporous materials to identify the most suitable material for target application. Such screenings face three main challenges: (i) achieving the accuracy of the methods used to characterize the key properties, (ii) reducing the experimental/computation time required to determine those properties, and (iii) incorporating additional properties often overlooked in performance evaluation. Adsorption selectivity, commonly used to assess separation performance, is typically used in this regard.
+This thesis explored various approaches to find the best nanoporous materials for adsorption-based industrial xenon/krypton separation (e.g., pressure-swing adsorption). As highlighted in the literature review,\autocite{Ren_2022} high-throughput screening methods focus on a specific property of nanoporous materials to identify the most suitable material for targeted application. Such screenings face three main challenges: (i) achieving the accuracy of the methods used to characterize the key properties, (ii) reducing the experimental/computation time required to determine those properties, and (iii) incorporating additional properties often overlooked in performance evaluation. Adsorption selectivity, commonly used to assess separation performance, is typically used in this regard.
 
 Chapter 2 focused on the different methodologies used to evaluate selectivity in different physical conditions, and demonstrated how screenings can provide a realistic picture of selective materials.\autocite{Ren_2021} The influence of composition, pressure and some structural descriptors were thoroughly examined. It was found that tailoring the pore size to match the size of xenon is key in achieving maximum selectivity. The Xe/Kr separation can be approximately described by the affinity of xenon for the material, which predominantly manifests in its enthalpic nature. When the partial pressure of xenon increases, the most favorable pores for xenon adsorption become saturated, leading to an observed selectivity decrease in certain materials.
  
@@ -11,7 +11,7 @@ Considering the prominent role of the enthalpic term, Chapter 3 introduced faste
 
 Chapter 4 proposed an ML model based on structural, chemical, and energetic descriptors to achieve GCMC-level accuracy combined with a speed comparable to faster low-dilution calculations.\autocite{Ren_2023_ml} This ML model demonstrated high accuracy and enabled GCMC-grade evaluations to be obtained with minimal computational resources. Importantly, the interpretation of this ML model offered novel approaches for investigating the structure-property relationship beyond conventional correlation analyses.
 
-To date, extensive research has focused on investigating thermodynamic properties computed using relatively simplistic assumptions through multiple correlation analysis and the development of various performance evaluation tools. To encompass different key properties, the transport properties were studied in Chapter 5. Different methodologies were investigated, including (i) molecular dynamics, which represents the most physically accurate but also the slowest method, requiring simulations of at least a few tens of nanoseconds to capture the diffusion process accurately; (ii) transition state-based methodologies that approximate the diffusion process by hopping from one site to another; (iii) an ML-based approach that uses descriptors based on activation energies (transition state theory) to predict the diffusion coefficient. By leveraging these calculated transport properties, the screening process successfully identified selective materials without kinetic limitations (that also happen to have high xenon capacity). This outcome validates the multivariate nature of the screening process, as such materials have the potential to significantly enhance productivity, yield a greater output during each pressure-swing cycle and enable faster cycles (in a PSA process). 
+To date, extensive research has focused on investigating thermodynamic properties computed using relatively simplistic assumptions through multiple correlation analysis and the development of various performance evaluation tools. To encompass different key properties, the transport properties were studied in Chapter 5. Different methodologies were investigated, including: (i) molecular dynamics, which represents the most physically accurate but also the slowest method, requiring simulations of at least a few tens of nanoseconds to capture the diffusion process accurately; (ii) transition state-based methodologies that approximate the diffusion process by hopping from one site to another; (iii) an ML-based approach that uses descriptors based on activation energies (transition state theory) to predict the diffusion coefficient. By leveraging these calculated transport properties, the screening process successfully identified selective materials without kinetic limitations (that also happen to have high xenon capacity). This outcome validates the multivariate nature of the screening process, as such materials have the potential to significantly enhance productivity, yield a greater output during each pressure-swing cycle and enable faster cycles (in a PSA process). 
 
 The final chapter provides prospects for future research studies regarding additional physical properties of materials that have been overlooked throughout this thesis. These properties include the flexibility of the material and the interactions induced by charged atoms or polar groups. By incorporating the polarization effect into the screening process, it becomes possible to identify materials with significantly higher experimental selectivity, as suggested by the characteristics of recently identified top-performing materials for Xe/Kr separation.\autocite{Li_2019,Pei_2022} Furthermore, the flexibility of the material can potentially provide insights into theory--experiment discrepancies that would otherwise remain unresolved, thus highlighting the importance of employing more accurate descriptions through flexibility-aware molecular simulations.
 
