--- a/4-ml.tex
+++ b/4-ml.tex
@@ -462,7 +462,7 @@ By combining the above-mentioned features with more standard geometrical descrip
 
 The eXtreme Gradient Boosting (XGBoost) algorithm was chosen as the machine learning framework for the predictive model due to its accuracy, efficiency, and simplicity of use. Its performance has been extensively demonstrated, as evidenced by 17 out of 29 winning solutions in Kaggle Challenges being based on this algorithm in 2015. The XGBoost system is highly scalable and parallelized, resulting in fast model training.\autocite{chen2016xgboost} Compared to more conventional tree-based algorithms like random forest (commonly used in the field~\autocite{Simon_2015}), the boosting component of the algorithm enables learning from previous mistakes and allocating greater effort to problematic data points, thereby improving the accuracy of the final ML model.
 
-In the following sections, new descriptors for nanoporous materials will be introduced, along with novel concepts of feature engineering based on energy and pore size histograms. The ML features have been selected through progressive filtering, eliminating less influential features on the accuracy of the final model. The complete list can be found in Table S1-3 of the Supporting Information (SI). The influence or importance of these features will be defined in a subsequent section dedicated to model interpretation. The hyperparameters of the model were fine-tuned through random searches to design the best-performing final model. Lastly, a unified approach will be employed to interpret the influence of the preselected descriptors on the final model.
+In the following sections, new descriptors for nanoporous materials will be introduced, along with novel concepts of feature engineering based on energy and pore size histograms. The ML features have been selected through progressive filtering, eliminating less influential features on the accuracy of the final model. A complete list of the feature used can be found in Tables~\ref{tab:geom_descriptors} and~\ref{tab:energy_descriptors}. The influence or importance of these features will be defined in a subsequent section dedicated to model interpretation. The hyperparameters of the model were fine-tuned through random searches to design the best-performing final model. Lastly, a unified approach will be employed to interpret the influence of the preselected descriptors on the final model.
 
 \subsubsection{Hyperparameter optimization}\label{sct:hyperparameter}
 
